# amplifier-bundle-execution-environments

./: .gitignore  README.md  SUPPORT.md  bundle.md  pyproject.toml
behaviors/: env-all.yaml  env-core.yaml  env-docker.yaml  env-security.yaml  env-ssh.yaml
context/: env-all-guide.md  env-core-guide.md  env-docker-guide.md  env-security-guide.md  env-ssh-guide.md
lib/: pyproject.toml
lib/amplifier_env_common/: __init__.py  env_filter.py  models.py  protocol.py  registry.py  schemas.py
lib/amplifier_env_common/backends/: __init__.py  docker.py  local.py  ssh.py
lib/amplifier_env_common/wrappers/: __init__.py  logging_wrapper.py  readonly_wrapper.py
lib/tests/: test_docker_backend.py  test_env_filter.py  test_local_backend.py  test_logging_wrapper.py  test_models.py  test_protocol.py  test_readonly_wrapper.py  test_registry.py  test_scaffold.py  test_schemas.py  test_ssh_backend.py
modules/hooks-env-all/: pyproject.toml
modules/hooks-env-all/amplifier_module_hooks_env_all/: __init__.py
modules/tools-env-all/: pyproject.toml
modules/tools-env-all/amplifier_module_tools_env_all/: __init__.py  dispatch.py  factory.py  management.py  ssh_discovery.py
tests/: test_behavior_split.py  test_cleanup_hook.py  test_context_guide.py  test_dispatch.py  test_e2e_multi_env.py  test_factory.py  test_lib_copy_completeness.py  test_local_path_deps.py  test_management.py  test_repo_references.py  test_ssh_discovery.py  test_thin_root_pattern.py  test_tools_mount.py
tests/integration/: conftest.py  test_phase4_docker.py  test_phase4_ssh.py
