[project]
name = "amplifier-module-hooks-env-all"
version = "0.2.0"
description = "Session cleanup hook for instance-based execution environments"
requires-python = ">=3.11"
dependencies = ["amplifier-env-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."amplifier.modules"]
hooks-env-all = "amplifier_module_hooks_env_all:mount"
